# rag-pipeline-api

./: .gitignore  README.md  main.py  pyproject.toml  sync_output.txt
app/: config.py  main.py  socketio_app.py
app/db/: session.py  tables.py  test_connection.py
app/models/: __init__.py  conversation.py  message.py  pipeline.py  user.py
app/rag/augmentation/: augment.py
app/rag/chunking/: base.py  service.py  strategies.py
app/rag/embedding/: embed.py
app/rag/generate/: generate.py
app/rag/load_documents/: load.py
app/rag/vector_database/: vector_db.py
app/rag/vector_search/: vdb_search.py
app/schemas/: auth.py  conversation.py  message.py  pipeline.py
app/utils/: build_message.py  file_handling.py  hash.py  pagination.py  security.py
app/v1/controller/: conversation.py  message.py  pipeline.py  user.py
app/v1/repository/: conversation.py  message.py  pipeline.py  user.py
app/v1/routers/: conversation.py  message.py  pipeline.py  user.py
app/v1/service/: conversation.py  message.py  pipeline.py  user.py
app/v1/socket/: socket_handlers.py
migrations/: env.py
migrations/versions/: 33a14701718b_initial_migration.py  3b67fc9fb91b_initial_migration.py  61ff9bbdca6d_initial_migration.py  6c512e854d0b_initial_migration.py  969c1a0e1256_initial_migration.py  99f70c5e3ae2_initial_migration.py  d0dafad720e0_initial_migration.py  f940501ef251_initial_migration.py
scripts/: run.ps1
