[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "bcrypt>=3.2.2",
    "chromadb>=1.5.2",
    "dotenv>=0.9.9",
    "fastapi>=0.132.0",
    "google-genai>=1.66.0",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "python-socketio[asgi]>=5.16.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
